<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="Login">Вход</string>
    <string name="LoginHint">Введите логин</string>
    <string name="PasswordHint">Введите пароль</string>
    <string name="RegistrationHint">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="LoginButton">Войти</string>
    <string name="FIOHint">ФИО</string>
    <string name="Registration">Регистрация</string>
    <string name="Register">Зарегистрироваться</string>
    <string name="menu">Меню</string>
    <string name="statistics">Статистика</string>
    <string name="userlist">Пользователи</string>
    <string name="startorder">Сделать/редактировать заказ</string>
    <string name="leavecomment">Оставить отзыв</string>
    <string name="statusorder">Статус заказа</string>
    <string name="payfororder">Оплатить заказ</string>
    <string name="cancelorder">Отменить заказ</string>
    <string name="select">Выбрать</string>
    <string name="NameHint">Введите название</string>
    <string name="DescHint">Введите описание</string>
    <string name="PriceHint">Введите цену</string>
    <string name="TimeHint">Введите время приготовления</string>
    <string name="postorder">Оформить заказ</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="toShoppingCart">Перейти в корзину</string>
    <string name="writeComment">Введите текст отзыва</string>
    <string name="periodbegin">"Период с "</string>
    <string name="Statistics">Статистика</string>
    <string name="datePlaceholder">--.--.----</string>
    <string name="getComments">Просмотр отзывов</string>
    <string name="addPhotoLabel">Добавить фотографию блюда</string>
</resources>